--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,21 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+######## CDK Typescript related
+*.js
+!jest.config.js
+*.d.ts
+node_modules
+
+# CDK asset staging directory
+*.swp
+cdk.context.json
+package-lock.json
+yarn.lock
+.cdk.staging
+cdk.out
+
+# Random stuff
+scrap
+scrap.txt
